<fix> (news-roller) changed default overflow to auto

--- a/src/news-roller/news-roller.css
+++ b/src/news-roller/news-roller.css
@@ -75,7 +75,7 @@
 {
     position: relative;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
 }
 #screens_container ::slotted(*)
 {
